// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Alert Alert 1`] = `
<div
  className="fade alert alert-primary show"
  role="alert"
>
  A simple alert
</div>
`;

exports[`Storyshots Components/Alert Danger 1`] = `
<div
  className="fade alert alert-danger show"
  role="alert"
>
  A 
  <code
    className="code code--inline"
  >
    danger
  </code>
   alert with 
  <a
    className="alert-link"
    href="#"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    a link
  </a>
  .
</div>
`;

exports[`Storyshots Components/Alert Dark 1`] = `
<div
  className="fade alert alert-dark show"
  role="alert"
>
  A 
  <code
    className="code code--inline"
  >
    dark
  </code>
   alert with 
  <a
    className="alert-link"
    href="#"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    a link
  </a>
  .
</div>
`;

exports[`Storyshots Components/Alert Info 1`] = `
<div
  className="fade alert alert-info show"
  role="alert"
>
  A 
  <code
    className="code code--inline"
  >
    info
  </code>
   alert with 
  <a
    className="alert-link"
    href="#"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    a link
  </a>
  .
</div>
`;

exports[`Storyshots Components/Alert Light 1`] = `
<div
  className="fade alert alert-light show"
  role="alert"
>
  A 
  <code
    className="code code--inline"
  >
    light
  </code>
   alert with 
  <a
    className="alert-link"
    href="#"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    a link
  </a>
  .
</div>
`;

exports[`Storyshots Components/Alert Primary 1`] = `
<div
  className="fade alert alert-primary show"
  role="alert"
>
  A 
  <code
    className="code code--inline"
  >
    primary
  </code>
   alert with 
  <a
    className="alert-link"
    href="#"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    a link
  </a>
  .
</div>
`;

exports[`Storyshots Components/Alert Secondary 1`] = `
<div
  className="fade alert alert-secondary show"
  role="alert"
>
  A 
  <code
    className="code code--inline"
  >
    secondary
  </code>
   alert with 
  <a
    className="alert-link"
    href="#"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    a link
  </a>
  .
</div>
`;

exports[`Storyshots Components/Alert Success 1`] = `
<div
  className="fade alert alert-success show"
  role="alert"
>
  A 
  <code
    className="code code--inline"
  >
    success
  </code>
   alert with 
  <a
    className="alert-link"
    href="#"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    a link
  </a>
  .
</div>
`;

exports[`Storyshots Components/Alert Warning 1`] = `
<div
  className="fade alert alert-warning show"
  role="alert"
>
  A 
  <code
    className="code code--inline"
  >
    warning
  </code>
   alert with 
  <a
    className="alert-link"
    href="#"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    a link
  </a>
  .
</div>
`;

exports[`Storyshots Components/Alert With Additional Content 1`] = `
<div
  className="fade alert alert-success show"
  role="alert"
>
  <h1
    className="h4 alert-heading"
    id="o:1s:1-hey,-nice-to-see-you"
  >
    <a
      href="#o:1s:1-hey,-nice-to-see-you"
    >
      Hey, nice to see you
    </a>
  </h1>
  <p>
    Aww yeah, you successfully read this important alert message. This example text is going to run a bit longer so that you can see how spacing within an alert works with this kind of content.
  </p>
  <hr />
  <p
    className="mb-0"
  >
    Whenever you need to, be sure to use margin utilities to keep things nice and tidy.
  </p>
</div>
`;
